--- a/challenge_5.ipynb
+++ b/challenge_5.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "# Note: Update the relative path to the data\n",
-    "my_data = pd.read_csv(\"../data/tmdb-movies.csv\")\n",
+    "my_data = pd.read_csv(\"tmdb-movies.csv\")\n",
     "grouped_data = my_data.groupby('release_year')"
    ]
   },
@@ -67,7 +67,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -81,9 +81,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
